projects/compiler/test/typechecker/import/error_alias_unknown_import.abra
import "./_exports" as a

a.bogus()
